# size-optimization-rust-binaries

./: Cargo.toml  README.md
src/: main.rs
